gccida/c2/visit_expression
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:720:4: error: expected ';' after expression
rtx reg; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:720:5: error: use of undeclared identifier 'reg'; did you mean 'ref'?
rtx reg; // rdi 
    ^~~
    ref
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:719:14: note: 'ref' declared here
 struct ref *ref; // rcx 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:727:4: error: expected ';' after expression
rtx v24; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:727:5: error: use of undeclared identifier 'v24'
rtx v24; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:734:4: error: expected ';' after expression
rtx v31; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:734:5: error: use of undeclared identifier 'v31'
rtx v31; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:749:4: error: expected ';' after expression
rtx const_value; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:749:5: error: use of undeclared identifier 'const_value'
rtx const_value; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:750:4: error: expected ';' after expression
rtx v47; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:750:5: error: use of undeclared identifier 'v47'
rtx v47; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:758:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v55; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:759:4: error: expected ';' after expression
rtx v56; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:759:5: error: use of undeclared identifier 'v56'
rtx v56; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:760:4: error: expected ';' after expression
rtx v57; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:760:5: error: use of undeclared identifier 'v57'
rtx v57; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:771:4: error: expected ';' after expression
rtx v68; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:771:5: error: use of undeclared identifier 'v68'
rtx v68; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:772:4: error: expected ';' after expression
rtx v69; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/ssa-ccp.c:772:5: error: use of undeclared identifier 'v69'
rtx v69; // r8 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/visit_expression/src/obj/ssa-ccp.o] Error 1
